--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 * {
   font-family: montserrat;
-  color: white;
+  color: black;
 }
 
 @font-face {
@@ -14,8 +14,7 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  /* background: linear-gradient(-45deg, #0a161a, #11263f, #122c34, #224870); */
-  background: radial-gradient(rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
+  background-color: #f7f3e3;
   background-size: 400% 400%;
   padding: 0;
   animation: gradient 5s ease-in-out infinite;
@@ -43,7 +42,7 @@ a:visited {
   justify-content: center;
   margin-top: 2.5em;
   font-size: 30px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
 }
 
 .container {
