--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -21,14 +21,14 @@ section {
 
 .bioContainer {
   margin-top: 0;
-  max-width: 25em;
+  max-width: 30em;
 }
 
 .coverpicture {
   width: 27.5rem;
   height: 27.5rem;
   border-radius: 9999px;
-  outline: 1px solid white;
+  outline: 1px solid black;
   font-weight: 700;
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -37,12 +37,12 @@ section {
 }
 
 .coverpicture:hover {
-  outline: 1.5px solid white;
+  outline: 1.5px solid #f7f3e3;
   transform: scale(1.05);
 }
 
 .hello {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
   font-size: 1.2em;
   display: inline-block;
   position: relative;
@@ -60,6 +60,15 @@ section {
   font-size: 1em;
   margin-top: 1em;
   line-height: 1.5rem;
+}
+
+.shortbio a {
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Use the same color as surrounding text */
+}
+
+.shortbio a:hover {
+  text-decoration: underline; /* Add underline on hover */
 }
 
 @media (max-width: 900px) {
