--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -23,7 +23,7 @@
   height: 100%;
   justify-content: center;
   display: flex;
-  font-size: 16px;
+  font-size: 17px;
   gap: 5em;
   margin: 50px 0 50px 0;
   padding: 50px 0 50px 0;
@@ -33,7 +33,7 @@
 }
 
 .experience__card img {
-  height: 120px;
+  height: 140px;
 }
 
 .experience__card div {
@@ -51,7 +51,7 @@
 
 .experience__employer {
   width: max-content;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
   font-size: 1.1rem;
   font-weight: 500;
   display: flex;
@@ -59,7 +59,7 @@
 }
 
 .experience__time {
-  font-size: smaller;
+  font-size: 16px;
   padding-top: 10px;
 }
 .experience__description {
