--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .nav {
   padding-bottom: 0.75rem;
-  border-bottom: 0.5px solid white;
+  border-bottom: 0.5px solid black;
   background-color: transparent;
   font-family: sans-serif;
   backdrop-filter: blur(5px);
@@ -41,7 +41,7 @@
 }
 .nav__icons:hover {
   transform: scale(1.1);
-  color: rgba(255, 255, 255, 0.6);
+  transform: translateY(-2px);
 }
 
 .nav__socials {
@@ -51,7 +51,7 @@
   font-weight: 700;
   padding: 0.5rem 2.5rem;
   gap: 1.25rem;
-  border-left: 1px solid white;
+  border-left: 1px solid black;
 }
 
 .nav__burger-menu {
